# mdSilo-spc

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  index.html  package-lock.json  package.json  rustfmt.toml  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml  test.yml
migrations/: 0_user.sql  4_forum.sql
spc-server/: Cargo.toml
spc-server/migrations/: 1_article.sql  2_feed.sql  3_item.sql
spc-server/src/: config.rs  error.rs  main.rs  router.rs
spc-server/src/api/: feed.rs  mod.rs  note.rs
spc-server/src/db/: article.rs  feed.rs  mod.rs  note.rs  sled.rs  tag.rs
spc-server/src/pad/: mdpad.rs  mod.rs
spc-server/src/ssr/: admin.rs  article.rs  feed.rs  home.rs  mod.rs  upload.rs  user.rs
spc-server/src/util/: feed.rs  helper.rs  img.rs  md.rs
spc-server/static/: manifest.json
spc-server/static/css/: styles.css
spc-server/templates/: _base.html  article.html  article_form.html  article_not_found.html  channel_add.html  channel_list.html  channel_preload.html  entry_list.html  entry_sum.html  error.html  explore.html  feed_reader.html  piece_form.html  profile.html  signin.html  signup.html  site_config.html  tag.html  upload.html  user_list.html
spc-util/: Cargo.toml
spc-util/src/: lib.rs
spc-wasm/: Cargo.toml
spc-wasm/src/: lib.rs  md.rs  utils.rs
spc-wasm/tests/: web.rs
src/: App.tsx  Footer.tsx  Preview.tsx  Score.tsx  User.tsx  config.rs  dataAgent.ts  index.css  index.tsx  main.rs  useHash.ts  utils.ts  vite-env.d.ts
src/collaboration/: CollaborationPage.tsx  User.tsx
src/collaboration/lib/: bands.json
src/components/: ConnectionStatus.tsx  Echarts.tsx  Footer.tsx  Mermaid.tsx  Preview.tsx  Score.tsx  User.tsx
src/db/: article.rs  feed.rs  mod.rs  user.rs
src/lib/: bands.json  languages.json  mdpad.ts  store.ts
src/mdpad/: EditorPage.tsx  PadPage.tsx  SplitEditor.tsx
src/mdpad/components/: Echarts.tsx  Mermaid.tsx  Preview.tsx  User.tsx
src/mdpad/lib/: bands.json  mdpad.ts
src/misc/: ErrorBoundary.tsx
src/pad/: document.rs  ot.rs
src/pages/: CollaborationPage.tsx  LandingPage.tsx
src/reader/: ArticleView.tsx  AudioPlayer.tsx  Channel.tsx  ChannelList.tsx  FeedManager.tsx  ReaderPage.tsx  types.ts
src/silo/: SiloPage.tsx
src/silo/components/: Logo.tsx
src/silo/components/feed/: ArticleView.tsx  AudioPlayer.tsx  Channel.tsx  ChannelList.tsx  FeedManager.tsx  dataAgent.ts
src/silo/components/mindmap/: mindmap.tsx
src/silo/components/misc/: ErrorBoundary.tsx
src/silo/components/note/: Note.tsx  NoteDelModal.tsx  NoteHeader.tsx  NoteMetadata.tsx  NoteMoveInput.tsx  NoteMoveModal.tsx  NoteNewInput.tsx  NoteNewModal.tsx  NoteSumList.tsx  Title.tsx
src/silo/components/note/backlinks/: BacklinkMatchLeaf.tsx  BacklinkNoteBranch.tsx  Backlinks.tsx  updateBacklinks.ts  useBacklinks.ts
src/silo/components/settings/: SettingsModal.tsx  SettingsToggle.tsx
src/silo/components/sidebar/: SideMenu.tsx  Sidebar.tsx  SidebarContent.tsx  SidebarDropdown.tsx  SidebarHeader.tsx  SidebarHistory.tsx  SidebarNoteLink.tsx  SidebarNotes.tsx  SidebarNotesBar.tsx  SidebarNotesSortDropdown.tsx  SidebarNotesTree.tsx  SidebarPlaylist.tsx  SidebarSearch.tsx  SidebarTags.tsx  StatusBar.tsx
src/silo/components/view/: ForceGraph.tsx  HeatMap.tsx  MainView.tsx  chronicle.tsx  feed.tsx  graph.tsx  hashtags.tsx  journals.tsx  md.tsx  tasks.tsx
src/silo/context/: viewReducer.ts
src/silo/editor/hooks/: useDeleteNote.ts  useExport.ts  useNoteSearch.ts  useOnNoteLinkClick.ts  useTasks.ts
src/silo/lib/: store.ts
src/ssr/: article.rs  auth.rs  feed.rs  home.rs
src/util/: helper.rs  identicon.rs  md.rs  mod.rs
src/writer/: NewNote.tsx  NoteEditor.tsx  NoteItem.tsx  NotePage.tsx  types.ts
templates/: article.html  change_psw.html  channel_add.html  entry_list.html  entry_sum.html  feed_reader.html  home.html  signup.html  site_config.html  upload.html  user_list.html  user_setting.html
