[package]
name = "spc"
version = "0.1.0"
edition = "2021"
license = "AGPL"

[dependencies]
spc-util = { path = "../spc-util", version = "0.1.0" }
futures = "0.3.27"
axum = { version = "0.6.12", features = ["http2", "ws", "headers", "form", "json", "query", "multipart", "tokio"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
axum-macros = "0.3.7"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
# for template
askama = { version = "0.12.0", default-features = false }
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.7.3" 
urlencoding = "2.1.2"
# for jwt/auth
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
captcha = { version = "0.0.9", default-features = false }
rand = "0.8.5"
ring = { version = "0.16.20", default-features = false }
# sled db
sled = { version = "0.34.7", features = ["compression"] }
bincode = "2.0.0-rc.2"
# for feed reader
atom_syndication = { version = "0.12.0", default-features = false }
rss = { version = "2.0.2", default-features = false }
reqwest = { version = "0.11.15", default-features = false, features = ["rustls-tls"] }
# for image
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png", "gif"] }
mozjpeg = "0.9.4"
img-parts = "0.3.0"
# for server end of collaborative editor
anyhow = "1.0.70"
bytecount = "0.6"
dashmap = "5.4.0"
operational-transform = { version = "0.6.1", features = ["serde"] }
parking_lot = "0.12.1"
pretty_env_logger = "0.4.0"
tokio-stream = "0.1.12"
# others
toml = "0.7.3"
log = "0.4.17"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
indexmap = "1.9.3"
nanoid = "0.4.0"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1"
# base
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["fs", "compression-gzip", "trace"] } # serve dir
tracing = { version = "0.1", features = ["release_max_level_info", "max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.4.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
