[package]
name = "spc-util"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = { version = "0.9.2", features = ["simd"], default-features = false }
syntect = { version = "5", features = ["regex-fancy", "default-syntaxes", "default-themes", "html"], default-features = false }
urlencoding = "2.1.2"
latex2mathml = "0.2.3"
once_cell = "1.17.1"
regex = "1.8.3"
chrono = "0.4.24"