# forked from: https://github.com/ekzhang/rustpad/tree/main/rustpad-wasm
# LICENSE: MIT Copyright (c) 2021 Eric Zhang 
# https://github.com/ekzhang/rustpad/blob/main/LICENSE 

[package]
name = "spc-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytecount = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
operational-transform = { version = "0.6.0", features = ["serde"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "0.2"
js-sys = "0.3.51"
spc-util = { path = "../spc-util", version = "0.1.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
